[package]
name = "ember-rs"
version = "0.1.3"
edition = "2021"
authors = ["Alan Koterba alan@koterba.dev"]
description = "Ember is a minimalistic Rust library for creating 2D graphics, games, and interactive visualizations with ease and simplicity."
repository = "https://github.com/koterba/ember-rs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.24.0"